# druid-operator

./: .gitignore  05-install-druid.yaml  CHANGELOG.md  Cargo.nix  Cargo.toml  Justfile  Makefile  README.md  crate-hashes.json  deny.toml  dev-cluster.yml  druid-scc.yaml  renovate.json  rustfmt.toml
.ci/integration-tests/aws-eks/: cluster.yaml  test.sh
.ci/integration-tests/azure-aks/: cluster.yaml  test.sh
.ci/integration-tests/hcloud-centos-8/: cluster.yaml
.ci/integration-tests/ionos-k8s/: cluster.yaml
.github/ISSUE_TEMPLATE/: 02-bug_report.yml  bug_report.yml  config.yml  new_version.md
.github/workflows/: build.yaml  build.yml  pr_generate_manifests.yml  publish_dev_artifacts.yml  publish_main_artifacts.yml  publish_pr_artifacts.yml  publish_release_artifacts.yml  rust.yml
.readme/: README.md.j2
.readme/partials/: main.md.j2
.readme/partials/borrowed/: links.md.j2
deploy/: DO_NOT_EDIT.md
deploy/config-spec/: properties.yaml
deploy/crd/: druidcluster.crd.yaml  productnamecluster.crd.yaml  restart.crd.yaml  s3credentials.crd.yaml  start.crd.yaml  stop.crd.yaml
deploy/helm/druid-operator/: Chart.yaml  README.md  values.yaml
deploy/manifests/: configmap.yaml  crds.yaml  deployment.yaml  roles.yaml  serviceaccount.yaml
deploy/olm/: bundle.sh
docker/: Dockerfile
docs/: antora.yml  templating.sh  templating_vars.yaml
docs/modules/ROOT/: nav.adoc
docs/modules/getting_started/: nav.adoc
examples/: aws_secret.yaml.private  hdfs-druid-cluster.yaml  restart.command.example.yaml  router-service.yaml  s3-credentials.yaml  simple-druid-cluster-derby.yaml  simple-druid-cluster-psql-s3.yaml  simple-druid-cluster-psql.yaml  simple-druid-cluster.yaml  start.command.example.yaml  stop.command.example.yaml
examples/derby/: derby-druid-cluster.yaml  druidcluster.yaml
examples/psql/: README.md  druidcluster.yaml  psql-druid-cluster.yaml  psql-hdfs-druid-cluster.yaml
examples/psql-s3/: .gitignore  README.md  druidcluster.yaml  psql-s3-druid-cluster.yaml  zookeepercluster.yaml
examples/tls/: tls-druid-cluster.yaml
extra/: crds.yaml
nix/: meta.json
packaging/debian/: stackable-druid-operator.service
rust/crd/: Cargo.toml
rust/crd/src/: affinity.rs  authentication.rs  authorization.rs  commands.rs  error.rs  ldap.rs  lib.rs  memory.rs  resource.rs  security.rs  storage.rs  tls.rs
rust/crd/src/authentication/: ldap.rs  mod.rs
rust/crd/test/resources/resource_merge/: druid_cluster.yaml  segment_cache.yaml
rust/crd/test/resources/role_service/: druid_cluster.yaml
rust/operator/: Cargo.toml
rust/operator-binary/: Cargo.toml  build.rs
rust/operator-binary/src/: config.rs  controller.rs  discovery.rs  druid_controller.rs  extensions.rs  framework.rs  internal_secret.rs  listener.rs  main.rs  probes.rs  product_logging.rs  service.rs  stackable-druid-operator.rs  testability_helpers.rs
rust/operator-binary/src/authentication/: ldap.rs  ldap_.rs  mod.rs  oidc.rs  oidc_.rs
rust/operator-binary/src/config/: jvm.rs
rust/operator-binary/src/controller/: apply.rs  build.rs  dereference.rs  fetch.rs  types.rs  validate.rs
rust/operator-binary/src/crd/: affinity.rs  authentication.rs  database.rs  memory.rs  mod.rs  resource.rs  security.rs  storage.rs  tls.rs
rust/operator-binary/src/framework/: role_utils.rs
rust/operator-binary/src/operations/: graceful_shutdown.rs  pdb.rs
rust/operator-binary/src/parts/: internal_secret.rs  mod.rs
rust/operator-binary/src/pre-refactor/: discovery.rs  druid_controller.rs  internal_secret.rs  main.rs
rust/operator-binary/src/webhooks/: conversion.rs
rust/operator-binary/test/override/: druid_cluster.yaml
rust/operator-binary/test/replace_kuttl_resources_test/: druid_cluster.yaml
rust/operator-binary/test/replace_kuttl_resources_test/stateful_set_snippets/: druid-resources-broker-default.yaml  druid-resources-coordinator-default.yaml  druid-resources-historical-default.yaml  druid-resources-middlemanager-resources-from-role-group.yaml  druid-resources-middlemanager-resources-from-role.yaml  druid-resources-router-default.yaml
rust/operator-binary/test/resources/crd/resource_merge/: druid_cluster.yaml  segment_cache.yaml
rust/operator-binary/test/resources/crd/role_service/: druid_cluster.yaml
rust/operator-binary/test/resources/druid_controller/: properties.yaml  segment_cache.yaml  simple.yaml
rust/operator-binary/test/resources/historical_segment_cache/: druid_cluster.yaml  druid_cluster_defaults.yaml  properties.yaml
rust/operator-binary/test/smoke/: druid_cluster.yaml  properties.yaml
rust/operator/src/: config.rs  error.rs  lib.rs
scripts/: docs_templating.sh  generate-manifests.sh  run-druid  run-tests  run_tests.sh
tests/: kuttl-test.yaml.jinja2  release.yaml  test-definition.yaml
tests/templates/authorizer/: 01-install-opa.yaml.j2  README.md  authcheck.py
tests/templates/hdfs-deep-storage/: 00-install-zk.yaml.j2  01-install-hdfs.yaml.j2
tests/templates/ingestion-no-s3-ext/: 02-install-druid.yaml.j2
tests/templates/orphaned-resources/: 00-install-zk.yaml.j2  02-install-druid.yaml.j2  03-update-druid.yaml.j2
tests/templates/resources/: 30-assert.yaml
tests/templates/s3-deep-storage/: 00-install-zk.yaml.j2  (+4 more)
(+383 files in other folders)
