[package]
authors = ["Stackable GmbH <info@stackable.de>"]
description = "Contains the Apache Druid CRD structs and utilities"
edition = "2021"
license = "OSL-3.0"
name = "stackable-druid-crd"
repository = "https://github.com/stackabletech/druid-operator"
version = "0.0.0-dev"
publish = false

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.39.0" }

semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.24", features = ["derive"] }
tracing = "0.1"
snafu = "0.7"
lazy_static = "1.4"

[dev-dependencies]
indoc = "2.0"
rstest = "0.16"
serde_yaml = "0.9"
