[package]
name = "stackable-druid-crd"
description = "Contains the Apache Druid CRD structs and utilities"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
indoc.workspace = true
product-config.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
stackable-operator.workspace = true
strum.workspace = true
tracing.workspace = true
snafu.workspace = true
lazy_static.workspace = true

[dev-dependencies]
rstest.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
