[package]
authors = ["Lars Francke <lars.francke@stackable.de>"]
description = "Stackable Operator for druid"
edition = "2021"
license = "OSL-3.0"
name = "stackable-druid-operator"
repository = "https://github.com/stackabletech/druid-operator"
version = "0.1.0-nightly"
build = "build.rs"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
stackable-druid-crd = { path = "../crd" }
clap = "2.33"
failure = "0.1.8"
futures = { version = "0.3.17", features = ["compat"] }
semver = "1.0.4"
serde = "1.0.130"
serde_json = "1.0.68"
serde_yaml = "0.8.21"
snafu = "0.6.10"
structopt = "0.3.23"
strum = "0.22.0"
strum_macros = "0.22.0"
tokio = { version = "1.12.0", features = ["full"] }
tokio01 = { version = "0.1.22", package = "tokio" }
tokio-executor = "0.1.10"
tracing = "0.1.29"
pin-project = "1.0.8"
anyhow = "1.0.48"
fnv = "1.0.7"

[build-dependencies]
built = { version =  "0.5", features = ["chrono", "git2"] }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
stackable-druid-crd = { path = "../crd" }
