[package]
authors = ["Stackable GmbH <info@stackable.de>"]
description = "Stackable Operator for Apache Druid"
edition = "2021"
license = "OSL-3.0"
name = "stackable-druid-operator"
repository = "https://github.com/stackabletech/druid-operator"
version = "0.0.0-dev"
publish = false

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.40.2" }
stackable-druid-crd = { path = "../crd" }
anyhow = "1.0"
clap = "4.1"
fnv = "1.0"
futures = { version = "0.3", features = ["compat"] }
indoc = "2.0.1"
openssl = "0.10.45"
pin-project = "1.0"
semver = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
snafu = "0.7"
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1.25", features = ["full"] }
tracing = "0.1"
lazy_static = "1.4"

[build-dependencies]
built = { version =  "0.5", features = ["chrono", "git2"] }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.40.2" }
stackable-druid-crd = { path = "../crd" }

[dev-dependencies]
rstest = "0.16"
