[package]
name = "stackable-druid-operator"
description = "Stackable Operator for Apache Druid"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
stackable-druid-crd = { path = "../crd" }

anyhow.workspace = true
clap.workspace = true
const_format.workspace = true
fnv.workspace = true
futures.workspace = true
indoc.workspace = true
openssl.workspace = true
pin-project.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
stackable-operator.workspace = true
product-config.workspace = true
strum.workspace = true
tokio.workspace = true
tracing.workspace = true

[build-dependencies]
built.workspace = true

[dev-dependencies]
rstest.workspace = true
serde_yaml.workspace = true
